- fixed alarm tables cell alignment to center for severity column.

--- a/src/app/modules/shared/table/table.component.scss
+++ b/src/app/modules/shared/table/table.component.scss
@@ -2,11 +2,11 @@
     .up, .down {
         display: flex;
         align-items: center;
-        justify-content: flex-start;
+        justify-content: center;
     }
 
     .up {
-        margin-right: 10px;
+        // margin-right: 10px;
     }
 
     .up-label {
